@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T16:06:28Z",
+  "timestamp" : "2022-06-09T08:08:18Z",
   "count_outdated" : 1547,
   "uniques_outdated" : 417,
-  "count" : 1576,
-  "uniques" : 433,
+  "count" : 1577,
+  "uniques" : 434,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
